--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="moviesPage" data-role="page" data-dom-cache="true" class="page libraryPage backdropPage pageWithAbsoluteTabs collectionEditorPage" data-backdroptype="movie" data-require="jqmcheckbox,jqmcontrolgroup,jqmpanel,jqmcollapsible,scripts/moviesrecommended">
+    <div id="moviesPage" data-role="page" data-dom-cache="true" class="page libraryPage backdropPage pageWithAbsoluteTabs collectionEditorPage" data-backdroptype="movie" data-require="jqmpanel,jqmcollapsible,scripts/moviesrecommended">
 
         <div class="libraryViewNav libraryViewNavWithMinHeight">
             <paper-tabs hidescrollbuttons noink>
@@ -140,148 +140,206 @@
         </div>
 
         <div data-role="panel" class="viewPanel movieViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
-            <form>
+            <div class="ui-panel-inner">
+                <form>
 
-                <fieldset data-role="controlgroup">
-                    <legend>
-                        ${HeaderFilters}
-                    </legend>
-                    <input class="chkStandardFilter" type="checkbox" id="chkPlayedMovie" data-filter="IsPlayed" data-mini="true">
-                    <label for="chkPlayedMovie">${OptionPlayed}</label>
+                    <div>
+                        <h1>
+                            ${HeaderFilters}
+                        </h1>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkUnplayedMovie" data-filter="IsUnPlayed" data-mini="true">
-                    <label for="chkUnplayedMovie">${OptionUnplayed}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkPlayedMovie" data-filter="IsPlayed" data-role="none">
+                            <label for="chkPlayedMovie">${OptionPlayed}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkResumableMovie" data-filter="IsResumable" data-mini="true">
-                    <label for="chkResumableMovie">${OptionResumable}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkUnplayedMovie" data-filter="IsUnPlayed" data-role="none">
+                            <label for="chkUnplayedMovie">${OptionUnplayed}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteMovie" data-filter="IsFavorite" data-mini="true">
-                    <label for="chkIsFavoriteMovie">${OptionFavorite}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkResumableMovie" data-filter="IsResumable" data-role="none">
+                            <label for="chkResumableMovie">${OptionResumable}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkLikesMovie" data-filter="Likes" data-mini="true">
-                    <label for="chkLikesMovie">${OptionLikes}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteMovie" data-filter="IsFavorite" data-role="none">
+                            <label for="chkIsFavoriteMovie">${OptionFavorite}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkDislikesMovie" data-filter="Dislikes" data-mini="true">
-                    <label for="chkDislikesMovie">${OptionDislikes}</label>
-                </fieldset>
-                <br />
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkLikesMovie" data-filter="Likes" data-role="none">
+                            <label for="chkLikesMovie">${OptionLikes}</label>
+                        </div>
 
-                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="genreFilters">
-                    <h2>${HeaderGenres}</h2>
-
-                    <div class="filterOptions">
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesMovie" data-filter="Dislikes" data-role="none">
+                            <label for="chkDislikesMovie">${OptionDislikes}</label>
+                        </div>
                     </div>
-                </div>
+                    <br />
 
-                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="officialRatingFilters">
-                    <h2>${HeaderParentalRatings}</h2>
+                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="genreFilters">
+                        <h2>${HeaderGenres}</h2>
 
-                    <div class="filterOptions">
+                        <div class="filterOptions">
+                        </div>
                     </div>
-                </div>
 
-                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="tagFilters">
-                    <h2>${HeaderTags}</h2>
+                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="officialRatingFilters">
+                        <h2>${HeaderParentalRatings}</h2>
 
-                    <div class="filterOptions">
+                        <div class="filterOptions">
+                        </div>
                     </div>
-                </div>
 
-                <div data-role="collapsible" data-collapsed="true" data-mini="true">
-                    <h2>${HeaderVideoTypes}</h2>
+                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="tagFilters">
+                        <h2>${HeaderTags}</h2>
 
-                    <div data-role="controlgroup">
-
-                        <input class="chkVideoTypeFilter chkBluray" type="checkbox" id="chkBlurayMovie" data-filter="Bluray" data-mini="true">
-                        <label for="chkBlurayMovie">${OptionBluray}</label>
-
-                        <input class="chkVideoTypeFilter chkDvd" type="checkbox" id="chkDvdMovie" data-filter="Dvd" data-mini="true">
-                        <label for="chkDvdMovie">${OptionDvd}</label>
-
-                        <input class="chkVideoTypeFilter chkIso" type="checkbox" id="chkIsoMovie" data-filter="Iso" data-mini="true">
-                        <label for="chkIsoMovie">${OptionIso}</label>
-
-                        <input class="chkHDFilter IsHD" type="checkbox" id="chkHDMovie" data-filter="IsHD" data-mini="true">
-                        <label for="chkHDMovie">${OptionIsHD}</label>
-
-                        <input class="chkSDFilter IsHD" type="checkbox" id="chkSDMovie" data-filter="IsHD" data-mini="true">
-                        <label for="chkSDMovie">${OptionIsSD}</label>
-
-                        <input class="chk3DFilter chk3D" type="checkbox" id="chk3DMovie" data-filter="Digital3D,Sbs3D" data-mini="true">
-                        <label for="chk3DMovie">${Option3D}</label>
+                        <div class="filterOptions">
+                        </div>
                     </div>
-                </div>
 
-                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="yearFilters">
-                    <h2>${HeaderYears}</h2>
+                    <div data-role="collapsible" data-collapsed="true" data-mini="true">
+                        <h2>${HeaderVideoTypes}</h2>
 
-                    <div class="filterOptions">
+                        <div>
+
+                            <div class="checkboxContainer">
+                                <input class="chkVideoTypeFilter chkBluray" type="checkbox" id="chkBlurayMovie" data-filter="Bluray" data-role="none">
+                                <label for="chkBlurayMovie">${OptionBluray}</label>
+                            </div>
+
+                            <div class="checkboxContainer">
+                                <input class="chkVideoTypeFilter chkDvd" type="checkbox" id="chkDvdMovie" data-filter="Dvd" data-role="none">
+                                <label for="chkDvdMovie">${OptionDvd}</label>
+                            </div>
+
+                            <div class="checkboxContainer">
+                                <input class="chkVideoTypeFilter chkIso" type="checkbox" id="chkIsoMovie" data-filter="Iso" data-role="none">
+                                <label for="chkIsoMovie">${OptionIso}</label>
+                            </div>
+
+                            <div class="checkboxContainer">
+                                <input class="chkHDFilter IsHD" type="checkbox" id="chkHDMovie" data-filter="IsHD" data-role="none">
+                                <label for="chkHDMovie">${OptionIsHD}</label>
+                            </div>
+
+                            <div class="checkboxContainer">
+                                <input class="chkSDFilter IsHD" type="checkbox" id="chkSDMovie" data-filter="IsHD" data-role="none">
+                                <label for="chkSDMovie">${OptionIsSD}</label>
+                            </div>
+
+                            <div class="checkboxContainer">
+                                <input class="chk3DFilter chk3D" type="checkbox" id="chk3DMovie" data-filter="Digital3D,Sbs3D" data-role="none">
+                                <label for="chk3DMovie">${Option3D}</label>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </form>
+
+                    <div data-role="collapsible" data-collapsed="true" data-mini="true" class="yearFilters">
+                        <h2>${HeaderYears}</h2>
+
+                        <div class="filterOptions">
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
 
         <div data-role="panel" class="viewPanel trailerViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
-            <form>
+            <div class="ui-panel-inner">
+                <form>
 
-                <fieldset data-role="controlgroup">
-                    <legend>
-                        ${HeaderFilters}
-                    </legend>
-                    <input class="chkStandardFilter" type="checkbox" id="chkPlayedTrailer" data-filter="IsPlayed" data-mini="true">
-                    <label for="chkPlayedTrailer">${OptionPlayed}</label>
+                    <div>
+                        <h1>
+                            ${HeaderFilters}
+                        </h1>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkPlayedTrailer" data-filter="IsPlayed" data-role="none">
+                            <label for="chkPlayedTrailer">${OptionPlayed}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkUnplayedTrailer" data-filter="IsUnPlayed" data-mini="true">
-                    <label for="chkUnplayedTrailer">${OptionUnplayed}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkUnplayedTrailer" data-filter="IsUnPlayed" data-role="none">
+                            <label for="chkUnplayedTrailer">${OptionUnplayed}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkResumableTrailer" data-filter="IsResumable" data-mini="true">
-                    <label for="chkResumableTrailer">${OptionResumable}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkResumableTrailer" data-filter="IsResumable" data-role="none">
+                            <label for="chkResumableTrailer">${OptionResumable}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteTrailer" data-filter="IsFavorite" data-mini="true">
-                    <label for="chkIsFavoriteTrailer">${OptionFavorite}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteTrailer" data-filter="IsFavorite" data-role="none">
+                            <label for="chkIsFavoriteTrailer">${OptionFavorite}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkLikesTrailer" data-filter="Likes" data-mini="true">
-                    <label for="chkLikesTrailer">${OptionLikes}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkLikesTrailer" data-filter="Likes" data-role="none">
+                            <label for="chkLikesTrailer">${OptionLikes}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkDislikesTrailer" data-filter="Dislikes" data-mini="true">
-                    <label for="chkDislikesTrailer">${OptionDislikes}</label>
-                </fieldset>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesTrailer" data-filter="Dislikes" data-role="none">
+                            <label for="chkDislikesTrailer">${OptionDislikes}</label>
+                        </div>
+                    </div>
 
-            </form>
+                </form>
+            </div>
         </div>
         <div data-role="panel" class="viewPanel peopleViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
-            <form>
+            <div class="ui-panel-inner">
+                <form>
 
-                <fieldset data-role="controlgroup">
-                    <legend>
-                        ${HeaderFilters}
-                    </legend>
-                    <input class="chkStandardFilter" type="checkbox" id="chkIsFavoritePerson" data-filter="IsFavorite" data-mini="true">
-                    <label for="chkIsFavoritePerson">${OptionFavorite}</label>
+                    <div>
+                        <h1>
+                            ${HeaderFilters}
+                        </h1>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoritePerson" data-filter="IsFavorite" data-role="none">
+                            <label for="chkIsFavoritePerson">${OptionFavorite}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkLikesPerson" data-filter="Likes" data-mini="true">
-                    <label for="chkLikesPerson">${OptionLikes}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkLikesPerson" data-filter="Likes" data-role="none">
+                            <label for="chkLikesPerson">${OptionLikes}</label>
+                        </div>
 
-                    <input class="chkStandardFilter" type="checkbox" id="chkDislikesPerson" data-filter="Dislikes" data-mini="true">
-                    <label for="chkDislikesPerson">${OptionDislikes}</label>
-                </fieldset>
-                <fieldset data-role="controlgroup">
-                    <legend>
-                        ${HeaderPersonTypes}
-                    </legend>
-                    <input class="chkPersonTypeFilter" type="checkbox" id="chkActorPerson" data-filter="Actor" data-mini="true">
-                    <label for="chkActorPerson">${OptionActors}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesPerson" data-filter="Dislikes" data-role="none">
+                            <label for="chkDislikesPerson">${OptionDislikes}</label>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>
+                            ${HeaderPersonTypes}
+                        </h1>
 
-                    <input class="chkPersonTypeFilter" type="checkbox" id="chkDirectorPerson" data-filter="Director" data-mini="true">
-                    <label for="chkDirectorPerson">${OptionDirectors}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkPersonTypeFilter" type="checkbox" id="chkActorPerson" data-filter="Actor" data-role="none">
+                            <label for="chkActorPerson">${OptionActors}</label>
+                        </div>
 
-                    <input class="chkPersonTypeFilter" type="checkbox" id="chkProducerPerson" data-filter="Producer" data-mini="true">
-                    <label for="chkProducerPerson">${OptionProducers}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkPersonTypeFilter" type="checkbox" id="chkDirectorPerson" data-filter="Director" data-role="none">
+                            <label for="chkDirectorPerson">${OptionDirectors}</label>
+                        </div>
 
-                    <input class="chkPersonTypeFilter" type="checkbox" id="chkWriterPerson" data-filter="Writer" data-mini="true">
-                    <label for="chkWriterPerson">${OptionWriters}</label>
-                </fieldset>
-            </form>
+                        <div class="checkboxContainer">
+                            <input class="chkPersonTypeFilter" type="checkbox" id="chkProducerPerson" data-filter="Producer" data-role="none">
+                            <label for="chkProducerPerson">${OptionProducers}</label>
+                        </div>
+
+                        <div class="checkboxContainer">
+                            <input class="chkPersonTypeFilter" type="checkbox" id="chkWriterPerson" data-filter="Writer" data-role="none">
+                            <label for="chkWriterPerson">${OptionWriters}</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
         <div data-role="content">
 
