--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -99,12 +99,12 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent recordingsTabContent" data-index="3">
-                        <div id="activeRecordings" style="display: none;" class="homePageSection">
+                        <div id="activeRecordings" class="homePageSection hide">
                             <h1 class="listHeader">${HeaderActiveRecordings}</h1>
                             <div class="recordingItems itemsContainer"></div>
                             <br />
                         </div>
-                        <div id="latestRecordings" style="display: none;" class="homePageSection">
+                        <div id="latestRecordings" class="homePageSection hide">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestRecordings}</h1>
                                 <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
