restore music alphabet pickers

--- a/MediaBrowser.WebDashboard/dashboard-ui/music.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/music.html
@@ -60,6 +60,8 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent" data-index="1">
+                        <div class="alphabetPicker">
+                        </div>
                         <div class="viewSettings">
                             <div class="listTopPaging">
                             </div>
@@ -75,6 +77,8 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent" data-index="2">
+                        <div class="alphabetPicker">
+                        </div>
                         <div class="viewSettings">
                             <div class="listTopPaging">
                             </div>
@@ -90,6 +94,8 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent" data-index="3">
+                        <div class="alphabetPicker">
+                        </div>
                         <div class="viewSettings">
                             <div class="listTopPaging">
                             </div>
