--- a/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysyncsettings.html
@@ -15,7 +15,7 @@
                 </h1>
                 <div class="detailSectionContent">
 
-                    <div>
+                    <div class="fldSyncPath hide">
                         <paper-input type="text" id="txtSyncPath" label="${LabelSyncPath}" style="display:inline-block;width:80%;" readonly></paper-input>
                         <paper-icon-button class="btnSelectSyncPath" icon="search"></paper-icon-button>
                     </div>
