update external subs

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -133,7 +133,7 @@
             </neon-animated-pages>
         </div>
 
-        <div data-role="panel" class="viewPanel channelViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel channelViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
                     <div>
