--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -139,7 +139,7 @@
             </neon-animated-pages>
         </div>
 
-        <div data-role="panel" class="viewPanel movieViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel movieViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -248,7 +248,7 @@
             </div>
         </div>
 
-        <div data-role="panel" class="viewPanel trailerViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel trailerViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -290,7 +290,7 @@
                 </form>
             </div>
         </div>
-        <div data-role="panel" class="viewPanel peopleViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel peopleViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
