--- a/MediaBrowser.WebDashboard/dashboard-ui/music.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/music.html
@@ -136,7 +136,7 @@
             </neon-animated-pages>
         </div>
 
-        <div data-role="panel" class="viewPanel albumsViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel albumsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -192,7 +192,7 @@
             </div>
         </div>
 
-        <div data-role="panel" class="viewPanel artistsViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel artistsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -227,7 +227,7 @@
             </div>
         </div>
 
-        <div data-role="panel" class="viewPanel albumArtistsViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel albumArtistsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -263,7 +263,7 @@
             </div>
         </div>
 
-        <div data-role="panel" class="viewPanel songsViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel songsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
