update tuner pooling

--- a/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
@@ -34,7 +34,7 @@
             <div id="items" class="itemsContainer paddedItemsContainer"></div>
         </div>
 
-        <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <form>
 
                 <div data-role="controlgroup" data-type="horizontal" data-mini="true" class="viewPanelTabs">
