fixes #1178 - Emby (stable) does not see changes when switching to dev

--- a/MediaBrowser.WebDashboard/dashboard-ui/advanced.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/advanced.html
@@ -42,7 +42,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <label for="selectAutomaticUpdateLevel">${LabelAutomaticUpdateLevel}</label>
+                                    <label class="lnlAutomaticUpdateLevel" for="selectAutomaticUpdateLevel"></label>
                                     <select name="selectAutomaticUpdateLevel" id="selectAutomaticUpdateLevel">
                                         <option value="Release">${OptionRelease}</option>
                                         <option value="Beta">${OptionBeta}</option>
