more client sync stubs

--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -12,8 +12,8 @@
             <div style="float:right;position:relative;top:5px;right:5px;text-align:right;">
                 <div>
                     <span class="nowPlayingSelectedPlayer"></span>
-                    <paper-fab mini icon="slideshow" class="btnSlideshow" style="vertical-align:middle;background:#888;z-index:1;margin-right:.5em;"></paper-fab>
                     <paper-fab mini icon="cast" class="blue nowPlayingCastIcon" onclick="MediaController.showPlayerSelection();" style="vertical-align:middle;"></paper-fab>
+                    <paper-fab mini icon="slideshow" class="btnSlideshow" style="vertical-align:middle;background:#888;z-index:1;margin-left:.5em;"></paper-fab>
                 </div>
             </div>
 
@@ -144,7 +144,7 @@
                     </div>
                 </neon-animatable>
                 <neon-animatable>
-                    <div class="playlist itemsContainer" style="max-width:800px;margin: 1.5em auto 0;">
+                    <div class="playlist itemsContainer" style="max-width:800px;margin: 2em auto 0;padding-bottom:200px;">
                     </div>
                 </neon-animatable>
             </neon-animated-pages>
