--- a/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-    <div id="itemListPage" data-role="page" class="page libraryPage folderListPage noSecondaryNavPage" data-require="jqmcheckbox,jqmcontrolgroup,jqmpanel,scripts/itemlistpage">
+    <div id="itemListPage" data-role="page" class="page libraryPage folderListPage noSecondaryNavPage" data-require="jqmpanel,scripts/itemlistpage">
         <div class="alphabetPicker">
         </div>
         <div data-role="content" class="itemListContent">
@@ -19,94 +19,42 @@
         <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <form>
 
-                <div data-role="controlgroup" data-type="horizontal" data-mini="true" class="viewPanelTabs">
-                    <a href="#" data-role="button" class="viewTabButton" data-tab="tabView">${TabView}</a>
-                    <a href="#" data-role="button" class="viewTabButton" data-tab="tabSort">${TabSort}</a>
-                    <a href="#" data-role="button" class="viewTabButton" data-tab="tabFilter">${TabFilter}</a>
-                </div>
+                <div>
 
-                <div class="tabView viewTab">
+                    <h1>
+                        ${HeaderFilters}
+                    </h1>
 
-                    <div>
-                        <label for="selectView">${LabelView}</label>
-                        <select id="selectView">
-                            <option value="Backdrop">${OptionBackdrop}</option>
-                            <option value="Poster">${OptionPoster}</option>
-                        </select>
-                    </div>
-                    <br />
-                    <div>
-                        <label for="selectPageSize">${LabelPageSize}</label>
-                        <select id="selectPageSize" class="selectPageSize"></select>
-                    </div>
-
-                </div>
-                <div class="tabFilter viewTab">
-                    <fieldset data-role="controlgroup">
-                        <legend>${HeaderFilters}</legend>
-                        <input class="chkStandardFilter" type="checkbox" name="chkPlayed" id="chkPlayed" data-filter="IsPlayed" data-mini="true">
+                    <div class="checkboxContainer">
+                        <input class="chkStandardFilter" type="checkbox" id="chkPlayed" data-filter="IsPlayed" data-role="none">
                         <label for="chkPlayed">${OptionPlayed}</label>
+                    </div>
 
-                        <input class="chkStandardFilter" type="checkbox" name="chkUnplayed" id="chkUnplayed" data-filter="IsUnPlayed" data-mini="true">
+                    <div class="checkboxContainer">
+                        <input class="chkStandardFilter" type="checkbox" id="chkUnplayed" data-filter="IsUnPlayed" data-role="none">
                         <label for="chkUnplayed">${OptionUnplayed}</label>
+                    </div>
 
-                        <input class="chkStandardFilter" type="checkbox" name="chkResumable" id="chkResumable" data-filter="IsResumable" data-mini="true">
+                    <div class="checkboxContainer">
+                        <input class="chkStandardFilter" type="checkbox" id="chkResumable" data-filter="IsResumable" data-role="none">
                         <label for="chkResumable">${OptionResumable}</label>
+                    </div>
 
-                        <input class="chkStandardFilter" type="checkbox" name="chkIsFavorite" id="chkIsFavorite" data-filter="IsFavorite" data-mini="true">
+                    <div class="checkboxContainer">
+                        <input class="chkStandardFilter" type="checkbox" id="chkIsFavorite" data-filter="IsFavorite" data-role="none">
                         <label for="chkIsFavorite">${OptionFavorite}</label>
+                    </div>
 
-                        <input class="chkStandardFilter" type="checkbox" name="chkLikes" id="chkLikes" data-filter="Likes" data-mini="true">
+                    <div class="checkboxContainer">
+                        <input class="chkStandardFilter" type="checkbox" id="chkLikes" data-filter="Likes" data-role="none">
                         <label for="chkLikes">${OptionLikes}</label>
+                    </div>
 
-                        <input class="chkStandardFilter" type="checkbox" name="chkDislikes" id="chkDislikes" data-filter="Dislikes" data-mini="true">
+                    <div class="checkboxContainer">
+                        <input class="chkStandardFilter" type="checkbox" id="chkDislikes" data-filter="Dislikes" data-role="none">
                         <label for="chkDislikes">${OptionDislikes}</label>
+                    </div>
 
-                    </fieldset>
-
-                </div>
-                <div class="tabSort viewTab">
-                    <fieldset data-role="controlgroup">
-                        <legend>
-                            ${HeaderSortBy}
-                        </legend>
-
-                        <input class="radioSortBy defaultSort" type="radio" name="radioSortBy" id="radioSortName" value="on" checked="checked" data-sortby="SortName" data-mini="true">
-                        <label for="radioSortName">${OptionNameSort}</label>
-
-                        <input class="radioSortBy" type="radio" name="radioSortBy" id="radioCommunityRating" value="off" data-sortby="CommunityRating" data-mini="true">
-                        <label for="radioCommunityRating">${OptionCommunityRating}</label>
-
-                        <input class="radioSortBy" type="radio" name="radioSortBy" id="radioDateCreated" value="off" data-sortby="DateCreated" data-mini="true">
-                        <label for="radioDateCreated">${OptionDateAdded}</label>
-
-                        <input class="radioSortBy" type="radio" name="radioSortBy" id="radioDatePlayed" value="off" data-sortby="DatePlayed" data-mini="true">
-                        <label for="radioDatePlayed">${OptionDatePlayed}</label>
-
-                        <input class="radioSortBy" type="radio" name="radioSortBy" id="radioContentRating" value="off" data-sortby="OfficialRating" data-mini="true">
-                        <label for="radioContentRating">${OptionParentalRating}</label>
-
-                        <input class="radioSortBy" type="radio" name="radioSortBy" id="radioPremiereDate" value="off" data-sortby="PremiereDate" data-mini="true">
-                        <label for="radioPremiereDate">${OptionReleaseDate}</label>
-
-                        <input class="radioSortBy" type="radio" name="radioSortBy" id="radioRuntime" value="off" data-sortby="Runtime" data-mini="true">
-                        <label for="radioRuntime">${OptionRuntime}</label>
-
-                        <input class="radioSortBy" type="radio" name="radioSortBy" id="radioIsFolder" value="off" data-sortby="IsFolder,SortName" data-mini="true">
-                        <label for="radioIsFolder">${OptionFolderSort}</label>
-                    </fieldset>
-
-                    <fieldset data-role="controlgroup">
-                        <legend>
-                            ${HeaderSortOrder}
-                        </legend>
-
-                        <input class="radioSortOrder" type="radio" name="radioSortOrder" id="radioAscending" value="on" checked="checked" data-sortorder="Ascending" data-mini="true">
-                        <label for="radioAscending">${OptionAscending}</label>
-
-                        <input class="radioSortOrder" type="radio" name="radioSortOrder" id="radioDescending" value="off" data-sortorder="Descending" data-mini="true">
-                        <label for="radioDescending">${OptionDescending}</label>
-                    </fieldset>
                 </div>
             </form>
         </div>
